--- a/roles/common/templates/apache.conf.j2
+++ b/roles/common/templates/apache.conf.j2
@@ -1,6 +1,8 @@
+Listen {{ http_port }}
+
 <VirtualHost *:{{ http_port }}>
    ServerAdmin webmaster@localhost
    ServerName {{ http_host }}
    ServerAlias www.{{ http_host }}
-   DocumentRoot /var/www/{{ http_host }}
+   DocumentRoot /var/www/{{ http_host_dir }}
 </VirtualHost>
